# Hackathon-Auto-Judge

./: .env.example  .gitignore  LICENSE  README.md  README_CN.md  pyproject.toml  start.sh
data/: sample_projects.csv
frontend/: api_client.py  app.py
frontend/pages/: 1_Config.py  2_Rubrics.py  3_Import.py  4_Evaluate.py  5_Leaderboard.py  6_Project_Detail.py
hackathon_judge/: main.py
hackathon_judge/api/: config.py  evaluations.py  export.py  projects.py  rubrics.py
hackathon_judge/config/: settings.py
hackathon_judge/db/: engine.py  models.py
hackathon_judge/rubrics/: defaults.py
hackathon_judge/schemas/: config.py  evaluation.py  project.py  rubric.py
hackathon_judge/services/: evaluation_engine.py  github_scraper.py  ingestion.py  llm_provider.py  token_budget.py
